@@ -6,6 +6,7 @@ apport (1.0-0ubuntu3) jaunty; urgency=low
     version information (and perhaps eventually run hooks?) for related
     packages
   * apport/hookutils.py: Add glob matching to package_versions()
+  * apport/hookutils.py: Add fuser info and dmesg to attach_alsa
 
  -- Matt Zimmerman <mdz@ubuntu.com>  Wed, 08 Apr 2009 18:49:27 +0100
 
